syntax = "proto3";

package common;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

// Common response wrapper with oneofs for different response types
message GrpcResponse {
  bool success = 1;
  string message = 2;
  int32 code = 3;
  
  oneof response_data {
    google.protobuf.Any payload = 4;
    ErrorDetails error = 5;
  }
  
  map<string, string> metadata = 6;
}

// Error details with comprehensive error information
message ErrorDetails {
  GrpcErrorCode code = 1;
  string message = 2;
  string type = 3;
  string description = 4;
  repeated string validation_errors = 5;
  map<string, ValidationError> field_errors = 6;
  ErrorContext context = 7;
}

message ValidationError {
  repeated string messages = 1;
  string field = 2;
  string value = 3;
}

message ErrorContext {
  string operation = 1;
  string service = 2;
  string user_id = 3;
  string request_id = 4;
  google.protobuf.Timestamp timestamp = 5;
  map<string, string> additional_params = 6;
}

// Comprehensive error codes
enum GrpcErrorCode {
  // Authentication errors
  AUTH_INVALID_CREDENTIALS = 0;
  AUTH_TOKEN_EXPIRED = 1;
  AUTH_TOKEN_INVALID = 2;
  AUTH_USER_NOT_FOUND = 3;
  AUTH_UNAUTHORIZED = 4;

  // User management errors
  USER_ALREADY_EXISTS = 100;
  USER_INVALID_EMAIL = 101;
  USER_INVALID_USERNAME = 102;
  USER_WEAK_PASSWORD = 103;
  USER_NOT_VERIFIED = 104;

  // Validation errors
  VALIDATION_ERROR = 200;
  INVALID_INPUT = 201;
  MISSING_REQUIRED_FIELDS = 202;

  // Permission errors
  FORBIDDEN = 300;
  INSUFFICIENT_PERMISSIONS = 301;

  // Rate limiting
  RATE_LIMITED = 400;
  TOO_MANY_REQUESTS = 401;

  // Server errors
  INTERNAL_ERROR = 500;
  SERVICE_UNAVAILABLE = 501;
  DATABASE_ERROR = 502;
  EXTERNAL_SERVICE_ERROR = 503;

  // Resource errors
  RESOURCE_NOT_FOUND = 600;
  RESOURCE_CONFLICT = 601;
  RESOURCE_EXPIRED = 602;
}

// Common pagination
message PaginationRequest {
  int32 page = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message PaginationResponse {
  int32 total = 1;
  int32 page = 2;
  int32 limit = 3;
  int32 offset = 4;
  int32 total_pages = 5;
  bool has_next = 6;
  bool has_previous = 7;
}

// Common base entity fields
message BaseEntity {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
}

message UpdatableBaseEntity {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  int32 version = 4;
}

// Empty messages
message Empty {}

// Common filter and sort options
message FilterOptions {
  map<string, string> filters = 1;
  string search = 2;
  google.protobuf.Timestamp date_from = 3;
  google.protobuf.Timestamp date_to = 4;
}

message SortOptions {
  string field = 1;
  SortDirection direction = 2;
}

enum SortDirection {
  ASC = 0;
  DESC = 1;
}

// Location and address types
message Location {
  string street = 1;
  string city = 2;
  string state = 3;
  string country = 4;
  string postal_code = 5;
  double latitude = 6;
  double longitude = 7;
}

// Language and currency enums
enum Language {
  ENGLISH = 0;
  SPANISH = 1;
  FRENCH = 2;
  GERMAN = 3;
  ITALIAN = 4;
  PORTUGUESE = 5;
  JAPANESE = 6;
  KOREAN = 7;
  CHINESE = 8;
}

enum Currency {
  USD = 0;
  EUR = 1;
  GBP = 2;
  JPY = 3;
  CAD = 4;
  AUD = 5;
  CHF = 6;
  CNY = 7;
}
